# eudaq

./: .gitignore  .travis.yml  CMakeLists.txt  KILLRUN  KILLRUN.local  Makefile  Makefile.common  STARTRUN  STARTRUN.local  appveyor.yml  data  env_EUDAQ.sh
.travis/: install_alpide_driver.sh  install_palpidefs_driver.sh
Detector/: EUTelExplorer20Detector.cc  EUTelExplorer20Detector.h  EUTelExplorer30Detector.cc  EUTelExplorer30Detector.h
Explorer1Producer/: Makefile
Explorer1Producer/include/: DeviceExplorer.hh
Explorer1Producer/old/: DeviceExplorer_old.cc  DeviceExplorer_old.hh  ExplorerProducer_old.cxx
Explorer1Producer/src/: DeviceExplorer.cc  ExplorerProducer.cxx
Explorer1Producer/srs-software/: ConfigureDAQ.sh  ConfigureExplorer.sh  GetSingleEvent.sh
Explorer1Producer/srs-software/slow_control/: conf_daq.py  config_explorer_driver.py  get_single_event.py  prepare_single_acq_explorer1.py  single_acq_explorer1.py  start_acq_digital.py  start_acq_explorer1.py  stop_acq_explorer1.py  tlu_triggering.py
conf/: ni_autotrig_explorer_pedestalmeas.conf  ni_coins_explorer_pedestalmeas.conf  ni_coins_explorer_wpedestal.conf  ni_coins_explorer_wthreshold.conf
etc/scripts/: KILLRUN.alpide  STARTRUN.alpide  STARTRUN.palpidefs
gui/include/: euRun.hh
main/exe/src/: Converter.cxx
main/include/eudaq/: Event.hh  EventSynchronisationBase.hh  RunControl.hh
main/lib/: CMakeLists.txt
main/lib/plugins/: PALPIDEFSConverterPlugin.cc
main/lib/src/: DataCollector.cc  Event.cc  EventSynchronisationBase.cc  ExplorerConverterPlugin.cc  RunControl.cc
main/src/: ExplorerConverterPlugin.cc
nreader/src/: EUTelNativeReader.cc
onlinemon/include/: OnlineMon.hh
onlinemon/src/: OnlineMon.cxx  SimpleStandardPlane.cc
producers/: CMakeLists.txt
producers/alpide/: CMakeLists.txt  README.md
producers/alpide/conf/: alpide.conf  alpide.init
producers/alpide/conf/alpide/: Default.cfg
producers/alpide/include/: ALPIDEProducer.hh  ALPIDEUtils.hh
producers/alpide/src/: ALPIDEProducer.cxx  ALPIDEUtils.cxx
producers/palpidefs/conf/palpidefs/: full_pALPIDE-4.xml
producers/palpidefs/include/: PALPIDEFSProducer.hh
producers/palpidefs/scripts/: change_back_bias.py  huber.py  watchdog.py  watchdog_config.py
producers/palpidefs/src/: PALPIDEFSProducer.cxx
tlu/src/: TLUControl.cxx  TLUController.cc
